@@ -1,3 +1,12 @@
+2013-10-22  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [EFL] Remove HAVE_GLX macro
+        https://bugs.webkit.org/show_bug.cgi?id=123191
+
+        Reviewed by Gyuyoung Kim.
+
+        * Source/cmake/OptionsEfl.cmake: Removed unnecessary HAVE_GLX macro
+
 2013-10-21  Gergo Balogh  <geryxyz@inf.u-szeged.hu>
 
         Remove .qmake.conf files
